Fixed issues with page nav and mega dropdowns on mobile viewports

--- a/app/assets/stylesheets/bootstrap-tweaks.scss
+++ b/app/assets/stylesheets/bootstrap-tweaks.scss
@@ -105,19 +105,15 @@ body {
 }
 
 /* Use desktop margins and floats since main nav never collapses */
-#main-nav .navbar-left,
-#page-nav .navbar-left {
+#main-nav .navbar-left {
   float: left !important;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin: 0 -15px;
 
   > li { float: left; }
 }
-#main-nav .navbar-right,
-#page-nav .navbar-right {
+#main-nav .navbar-right {
   float: right !important;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin: 0 -15px;
 
   > li { float: left; }
 }
@@ -273,6 +269,22 @@ body {
 
     .form-group, .form-control { width: 100%; }
   }
+}
+
+/* Never collapse page nav */
+#page-nav .navbar-left {
+  float: left !important;
+
+  > li { float: left; }
+}
+#page-nav .navbar-right {
+  float: right !important;
+
+  > li { float: left; }
+}
+#page-nav .open .dropdown-menu {
+  position: absolute;
+  background-color: #fff;
 }
 
 
